--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -98,7 +98,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="26dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="10dp"
         android:fillViewport="true"
         android:overScrollMode="never"
         app:layout_constraintBottom_toTopOf="@+id/activity_join_step3_btn_popup"
@@ -128,7 +128,7 @@
                 android:id="@+id/textView23"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="18dp"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
                 android:includeFontPadding="false"
@@ -146,7 +146,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="54dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="58dp"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
@@ -164,7 +164,7 @@
                 android:id="@+id/textView28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="42dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:includeFontPadding="false"
                 android:letterSpacing="0.01"
@@ -180,7 +180,7 @@
                 android:id="@+id/activity_join_step3_et_code1"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
@@ -196,7 +196,10 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView28" />
+                app:layout_constraintTop_toBottomOf="@+id/textView28">
+
+                <requestFocus />
+            </EditText>
 
             <EditText
                 android:id="@+id/activity_join_step3_et_code2"
