--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -191,7 +191,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code2"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code2"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -215,7 +215,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code3"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code3"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code1"
@@ -235,7 +235,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code4"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code4"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code2"
@@ -255,7 +255,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code5"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code5"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code3"
@@ -275,7 +275,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code6"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code6"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code4"
@@ -294,7 +294,7 @@
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
                 android:textColor="@color/soft_green"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code5"
