--- a/app/src/main/res/layout/writing_sentence_book_result.xml
+++ b/app/src/main/res/layout/writing_sentence_book_result.xml
@@ -132,14 +132,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/writing_sentence_book_result_rv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingBottom="32dp"
+        android:paddingHorizontal="16dp"
         android:layout_marginTop="165dp"
-        app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintEnd_toEndOf="@id/gl_right"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="visible"
         tools:listitem="@layout/item_writing_sentence_book_result" />
