--- a/app/src/main/res/layout/writing_sentence_theme_no_result.xml
+++ b/app/src/main/res/layout/writing_sentence_theme_no_result.xml
@@ -33,7 +33,7 @@
         android:orientation="horizontal"/>
 
     <ImageView
-        android:id="@+id/writing_sentence_book_no_result_btn_out"
+        android:id="@+id/writing_sentence_theme_no_result_btn_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/writing_sentence_btn_cancel"
@@ -46,7 +46,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="책 검색"
+        android:text="테마 검색"
         android:textStyle="bold"
         android:textSize="19sp"
         android:textColor="@color/black_two"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="@id/gl_top"/>
 
     <EditText
-        android:id="@+id/writing_sentence_book_no_result_et_search"
+        android:id="@+id/writing_sentence_theme_no_result_et_search"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:background="@drawable/et_area"
@@ -72,26 +72,26 @@
     </EditText>
 
     <ImageView
-        android:id="@+id/writing_sentence_book_no_result_btn_search"
+        android:id="@+id/writing_sentence_theme_no_result_btn_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btn_search"
         android:padding="13dp"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_no_result_et_search"
-        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_no_result_et_search"
-        app:layout_constraintEnd_toEndOf="@id/writing_sentence_book_no_result_et_search"
+        app:layout_constraintTop_toTopOf="@id/writing_sentence_theme_no_result_et_search"
+        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_theme_no_result_et_search"
+        app:layout_constraintEnd_toEndOf="@id/writing_sentence_theme_no_result_et_search"
         />
 
     <ImageView
-        android:id="@+id/writing_sentence_book_no_result_btn_delete"
+        android:id="@+id/writing_sentence_theme_no_result_btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="8dp"
         android:paddingVertical="14dp"
         android:src="@drawable/writing_sentence_theme_6_error_btn_erase"
-        app:layout_constraintEnd_toStartOf="@id/writing_sentence_book_no_result_btn_search"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_no_result_et_search"
-        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_no_result_et_search"/>
+        app:layout_constraintEnd_toStartOf="@id/writing_sentence_theme_no_result_btn_search"
+        app:layout_constraintTop_toTopOf="@id/writing_sentence_theme_no_result_et_search"
+        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_theme_no_result_et_search"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
