--- a/app/src/main/res/layout/writing_theme_step1.xml
+++ b/app/src/main/res/layout/writing_theme_step1.xml
@@ -149,6 +149,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/writing_theme_rv"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="250dp"
