--- a/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
@@ -186,15 +186,19 @@
 
                 <TextView
                     android:id="@+id/textView35"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="16dp"
+                    android:ellipsize="end"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="7sp"
+                    android:singleLine="true"
                     android:text="오체불만족"
                     android:textColor="@color/black"
                     android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView20"
                     app:layout_constraintTop_toTopOf="@+id/imageView20" />
 
@@ -355,23 +359,24 @@
                 android:text="502"
                 android:textColor="@color/very_light_pink_two"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/img_sentence_detail_likes"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/img_sentence_detail_likes" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_bookmark_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/et_area_sentence_bottom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/constraint_likes_num">
+            app:layout_constraintStart_toEndOf="@+id/constraint_only_sentence_like_num">
 
             <ImageView
                 android:id="@+id/imageView16"
@@ -396,10 +401,10 @@
                 android:text="247"
                 android:textColor="@color/very_light_pink_two"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView16"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView16"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/imageView16" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
