--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -184,15 +184,19 @@
 
                 <TextView
                     android:id="@+id/textView35"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="16dp"
+                    android:ellipsize="end"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="7sp"
+                    android:singleLine="true"
                     android:text="오체불만족"
                     android:textColor="@color/black"
                     android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView20"
                     app:layout_constraintTop_toTopOf="@+id/imageView20" />
 
@@ -381,46 +385,61 @@
 
         <CheckBox
             android:id="@+id/constraint_likes_num"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="34dp"
-            android:button="@null"
             android:background="@drawable/et_area_sentence_bottom"
+            android:button="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/container_bookmark_num"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_sentence_likes_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="19dp"
-            android:fontFamily="@font/notosanscjkkr_demilight"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="8sp"
-            android:text="502"
-            android:textColor="@color/very_light_pink_two"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes_num"
-            app:layout_constraintTop_toTopOf="@+id/constraint_likes_num" />
-
-
-        <ImageView
-            android:id="@+id/img_sentence_detail_likes_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="57dp"
-            android:layout_marginTop="23dp"
-            android:src="@drawable/sentence_theme_o_ic_like"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/constraint_likes_num"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_likes_num"
             app:layout_constraintStart_toStartOf="@+id/constraint_likes_num"
-            app:layout_constraintTop_toTopOf="@+id/constraint_likes_num" />
+            app:layout_constraintTop_toTopOf="@+id/constraint_likes_num">
+
+            <ImageView
+                android:id="@+id/img_sentence_detail_likes_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sentence_theme_o_ic_like"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv_sentence_likes_num"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_sentence_likes_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:lineSpacingExtra="8sp"
+                android:text="502"
+                android:textColor="@color/very_light_pink_two"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@id/img_sentence_detail_likes_num"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes_num"
+                app:layout_constraintTop_toTopOf="@id/img_sentence_detail_likes_num" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_bookmark_num"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/et_area_sentence_bottom"
@@ -433,11 +452,13 @@
                 android:id="@+id/imageView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="59dp"
                 android:layout_marginTop="21dp"
                 android:layout_marginBottom="21dp"
                 android:src="@drawable/sentence_theme_o_ic_bookmark"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv_sentence_bookmark_num"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -446,17 +467,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="9dp"
-                android:layout_marginEnd="60dp"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:includeFontPadding="false"
                 android:lineSpacingExtra="8sp"
                 android:text="247"
                 android:textColor="@color/very_light_pink_two"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView16"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/imageView16"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/imageView16" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
