--- a/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
@@ -324,7 +324,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_only_sentence_like_num"
+            android:id="@+id/constraint_sentence_like_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -348,7 +348,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/tv_sentence_detail_likes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="9dp"
@@ -376,10 +376,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/constraint_only_sentence_like_num">
+            app:layout_constraintStart_toEndOf="@+id/constraint_sentence_like_num">
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/img_sentence_detail_bookmark_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="59dp"
@@ -391,6 +391,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_sentence_detail_bookmark_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="9dp"
@@ -401,10 +402,10 @@
                 android:text="247"
                 android:textColor="@color/very_light_pink_two"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView16"
+                app:layout_constraintBottom_toBottomOf="@+id/img_sentence_detail_bookmark_num"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView16"
-                app:layout_constraintTop_toTopOf="@+id/imageView16" />
+                app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_bookmark_num"
+                app:layout_constraintTop_toTopOf="@+id/img_sentence_detail_bookmark_num" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
