--- a/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
@@ -326,7 +326,7 @@
                 android:layout_marginTop="41dp"
                 android:layout_marginEnd="28dp"
                 android:background="@drawable/background_rectangle"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/middle_line">
 
