--- a/app/src/main/res/layout/onboarding_step2.xml
+++ b/app/src/main/res/layout/onboarding_step2.xml
@@ -84,7 +84,7 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
