--- a/app/src/main/res/layout/onboarding_step3.xml
+++ b/app/src/main/res/layout/onboarding_step3.xml
@@ -90,7 +90,7 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,9 +113,9 @@
             android:layout_height="wrap_content"
             android:src="@drawable/onboarding_3_img_mongle"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="60dp"
             app:layout_constraintBottom_toBottomOf="@id/onboarding_3_img_bookshelf"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
